--- a/jupyter/dataAquisition.ipynb
+++ b/jupyter/dataAquisition.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "driver = webdriver.Chrome()\n",
     "\n",
-    "# (manually)set the download folder for the browzer\n"
+    "# (manually) set the download folder for the browzer\n"
    ]
   },
   {
@@ -114,7 +114,6 @@
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
-    "\n",
     "# again, setting the default download folder manually now.."
    ]
   },
@@ -151,6 +150,72 @@
     "    branchNameInput.submit()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shupersal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome()\n",
+    "# again, setting the default download folder manually now.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "driver.get('http://prices.shufersal.co.il/')\n",
+    "driver.find_element_by_id('ddlCategory').click()\n",
+    "driver.find_element_by_xpath(\"//option[contains(text(),'PricesFull')]\").click()\n",
+    "driver.find_element_by_id('ddlCategory').click()\n",
+    "time.sleep(5)\n",
+    "links = driver.find_elements_by_tag_name('a')\n",
+    "links = [l for l in links if l.text == u'לחץ להורדה']\n",
+    "for l in links:\n",
+    "        driver.get(l.get_attribute('href'))\n",
+    "        time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(15):\n",
+    "    driver.find_element_by_xpath(\"//a[contains(text(),'>')]\").click()\n",
+    "    time.sleep(5)\n",
+    "    links = driver.find_elements_by_tag_name('a')\n",
+    "    links = [l for l in links if l.text == u'לחץ להורדה']\n",
+    "    for l in links:\n",
+    "        driver.get(l.get_attribute('href'))\n",
+    "        time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
